# dspaces

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/execute/: CMakeLists.txt  README.md  dataspaces.conf  dsserver.cpp  instagingexecution.cpp  instagingexecution.h  mb.hpp  sim.cpp  sim_elastic.cpp  test_elastic.scripts  test_execute.scripts  test_execute_large.scripts  test_execute_small.scripts  test_str.cpp
include/: addmanagement.hpp  addrmanager-client.hpp  addrmanager-server.hpp  addrmanager.hpp  bbox.h  dspaces-server.h  dspaces.h  ss_data.h
src/: CMakeLists.txt  addmanagement.cpp  addrmanager-client.cpp  addrmanager-server.cpp  addrmanager.cpp  bbox.c  dspaces-client.c  dspaces-server.c  ss_data.c
tests/: CMakeLists.txt
